# screenshotter

./: .gitignore  Cargo.toml  README.md  example-delegate.sh  go.mod  go.sum  main.go  screenshotter.sway.toml.sample  screenshotter.toml.sample  screenshotter.x.toml.sample  target.go  todo  util.go
src/: config.rs  main.rs  selection.rs  target.rs
