[package]
name = "screenshotter"
version = "0.1.0"
edition = "2024"

[dependencies]
awconf = { git = "https://github.com/awused/awconf" }
clap = { version = "4.6.1", features = ["derive", "color"] }
color-eyre = "0.6.5"
image = { version = "0.25.10", default-features = false, features = [ "pnm", "png" ] }
regex = "1.12.3"
serde = { version = "1.0.228", default-features = false, features = [ "derive" ] }
swayipc = "4.0.0"
tempfile = "3.27.0"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.2"
